# fast_api_template

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci-cd.yml
alembic/: env.py
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docs/: api.md  architecture.md  scheduler.md
requirements/: base.txt  dev.txt  prod.txt
scripts/: migrate.sh  start.sh  test.sh
src/app/: main.py
src/app/api/: deps.py
src/app/api/v1/: router.py
src/app/api/v1/endpoints/: auth.py  items.py  mongodb_notes.py  users.py
src/app/config/: database.py  settings.py
src/app/core/: exceptions.py  security.py
src/app/database/: base_class.py  mongodb.py  session.py
src/app/middleware/: cors.py  logging.py
src/app/models/: base.py  item.py  mongodb_base.py  mongodb_note.py  user.py
src/app/schemas/: item.py  mongodb_note.py  token.py  user.py
src/app/services/: auth_service.py  item_service.py  mongodb_note_service.py  user_service.py
src/app/utils/: helpers.py  logging.py
src/app/workers/: scheduler.py  tasks.py
src/tests/: conftest.py
src/tests/test_api/: test_auth.py  test_items.py  test_users.py
src/tests/test_services/: test_auth_service.py  test_user_service.py
